Add more fields to user, update schema, package.json version and other code parts
